--- a/KonekLogicProcess/KonekLogicProcess.csproj
+++ b/KonekLogicProcess/KonekLogicProcess.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KonekDataLogic\KonekDataService.csproj" />
+  </ItemGroup>
+
 </Project>
