--- a/KonekApplication/KonekApplication.csproj
+++ b/KonekApplication/KonekApplication.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\KonekCommon\KonekCommon.csproj" />
     <ProjectReference Include="..\KonekLogicProcess\KonekLogicProcess.csproj" />
   </ItemGroup>
 
