--- a/KonekLogicProcess/KonekLogicProcess.csproj
+++ b/KonekLogicProcess/KonekLogicProcess.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.14.1" />
+    <PackageReference Include="MimeKit" Version="4.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\KonekDataLogic\KonekDataServices.csproj" />
   </ItemGroup>
 
