unfinished SIA, to be continued

--- a/KonekAppAPI/appsettings.json
+++ b/KonekAppAPI/appsettings.json
@@ -1,9 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "EmailSettings": {
+        "FromName": "Konek System",
+        "FromAddress": "do-not-reply@atm.com",
+        "ToName": "Account Owner",
+        "ToAddress": "user@example.com",
+        "SmtpHost": "sandbox.smtp.mailtrap.io",
+        "SmtpPort": 2525,
+        "SmtpUsername": "af256fbdb07ed2",
+        "SmtpPassword": "0c8781b15e2063",
+        "EnableTls": true
     }
-  },
-  "AllowedHosts": "*"
 }
