--- a/KonekGUI/KonekGUI.csproj
+++ b/KonekGUI/KonekGUI.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\KonekCommon\KonekCommon.csproj" />
     <ProjectReference Include="..\KonekLogicProcess\KonekLogicProcess.csproj" />
   </ItemGroup>
