--- a/KonekLogicProcess/KonekLogicProcess.csproj
+++ b/KonekLogicProcess/KonekLogicProcess.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="4.14.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.10" />
     <PackageReference Include="MimeKit" Version="4.14.0" />
   </ItemGroup>
 
