--- a/KonekAppAPI/appsettings.json
+++ b/KonekAppAPI/appsettings.json
@@ -8,13 +8,13 @@
     "AllowedHosts": "*",
     "EmailSettings": {
         "FromName": "Konek System",
-        "FromAddress": "do-not-reply@atm.com",
-        "ToName": "Account Owner",
-        "ToAddress": "user@example.com",
+        "FromAddress": "frederickr@gmail.com",
+        "ToName": "Frederick",
+        "ToAddress": "fred@gmail.com",
         "SmtpHost": "sandbox.smtp.mailtrap.io",
         "SmtpPort": 2525,
-        "SmtpUsername": "af256fbdb07ed2",
-        "SmtpPassword": "0c8781b15e2063",
+        "SmtpUsername": "5db290b7234a85",
+        "SmtpPassword": "13e7b2d9ad37a3",
         "EnableTls": true
     }
 }
